--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -3,12 +3,24 @@ on:
   push:
     branches:
       - master
+    tags:
+      - 'v*'
   pull_request:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major.minor}}
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -21,6 +33,9 @@ jobs:
       - name: Build and push Docker image
         uses: docker/bake-action@v6
         with:
+          files: |
+            ./docker-bake.hcl
+            cwd://${{ steps.meta.outputs.bake-file }}
           push: ${{ github.event_name != 'pull_request' }}
           provenance: true
           sbom: true
